--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     font-family:"微软雅黑";
 }
 
+/* PC端的CSS代码 */
 .header{
     height: 100px;
     /* background-color:black; */
@@ -123,3 +124,26 @@
 .footer-nav>ul a:hover{
     color: rgb(2, 128, 212);  
 }
+
+/* 移动端的CSS代码 */
+.move{
+    text-align: center;
+    font-weight: bold;
+}
+
+.app-nav::after{
+    content:'';
+    clear:both;
+    display: block;
+}
+
+.app-nav>img{
+    vertical-align: middle;
+}
+
+.app-nav>h1{
+    font-size: 1.5em;
+    text-align: center;
+    color: rgb(2, 128, 212);
+}
+
